# arch-sysup-rs

./: Cargo.toml  PKGBUILD  README.md
src/: main.rs
