[package]
name = "arch-sysup"
version = "1.0.0"
edition = "2021"
description = "Arch Linux GUI system manager"
authors = ["arch-sysup contributors"]

[[bin]]
name = "arch-sysup"
path = "src/main.rs"

[dependencies]
eframe  = { version = "0.27", features = ["default"] }
egui    = "0.27"
image   = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
